infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: data-cleaning
  labels:
    name: data-cleaning
